kube2/kuber-deploy-nodeport.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - image: registry.intellicad.org/kuber:latest
          name: kuber
          ports:
            - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  externalTrafficPolicy: Local
  # sessionAffinity: ClientIP # restrict request from current host to current pod (cached ip addr)
  ports:
    - name: app-listener-1
      port: 80
      protocol: TCP
      targetPort: 8000
      nodePort: 30080 # port-range: 30000-32767
  selector:
    app: my-app
  type: NodePort
